adds contact form to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,17 @@
       rel="stylesheet"
     />
 
-    <title>Beverly</title>
+    <title>Beverly Osoria</title>
   </head>
 
   <body>
     <div id="root"></div>
+
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+
+      <textarea name="message"></textarea>
+    </form>
   </body>
 </html>
