--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,10 @@
       href="https://fonts.googleapis.com/css?family=Raleway|Rubik:300,400,500,700,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
     <title>Beverly Osoria</title>
   </head>
